--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>dRaffle</title>
+    <link rel="stylesheet" href="styles.scss" />
     <script type="module" src="index.tsx"></script>
   </head>
   <body>
