updated the logo to the draffle one

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>dRaffle</title>
+    <title>draffle</title>
     <link rel="stylesheet" href="styles.scss" />
     <script type="module" src="index.tsx"></script>
   </head>
